--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_custom_dropdown: ^1.4.0
   cupertino_icons: ^1.0.2
-  dropdown_button2: ^2.0.0
+  equatable: ^2.0.5
   firebase_core: null
   firebase_database: null
   flutter:
